adding a heading to the main page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <script src="minimax.js"></script>
         <script src="sketch.js"></script>
+        <h1> Welcome to Tic Tac Toe</h1>
     </body>
 </html>
