--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <script src="minimax.js"></script>
         <script src="sketch.js"></script>
         <h1> Welcome to Tic Tac Toe</h1>
+        <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@amasad/PitifulLastingWhoopingcrane?lite=true"></iframe>
+
     </body>
 </html>
