add some more css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <script src="minimax.js"></script>
-        <script src="sketch.js"></script>
         <h1> Welcome to Tic Tac Toe</h1>
-        <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@GiovannyDe1/ContentCrookedModules?lite=true&outputonly=1"></iframe>
+        <h2> Try to beat the smart bot player</h2>
+        <div class ='game'>
+            <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@GiovannyDe1/ContentCrookedModules?lite=true&outputonly=1"></iframe>
+        </div>
+        
 
     </body>
 </html>
