--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1> Welcome to Tic Tac Toe</h1>
-        <h2> Try to beat the smart bot player</h2>
+        <h1 class='heading'> Welcome to Tic Tac Toe</h1>
+        <h2 class='heading'>Try to beat the smart bot player</h2>
+        <h3 class='heading'> Press run to begin the game</h3>
         <div class ='game'>
-            <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@GiovannyDe1/ContentCrookedModules?lite=true&outputonly=1"></iframe>
+            <iframe frameborder="0" width="75%" height="500px" src="https://replit.com/@GiovannyDe1/ContentCrookedModules?lite=true&outputonly=1"></iframe>
         </div>
-        
-
     </body>
 </html>
